infra: add persistent lexical indexing
